clean unused function

--- a/code/01_data_cleaning.ipynb
+++ b/code/01_data_cleaning.ipynb
@@ -48,33 +48,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_train_test(status='train'):\n",
-    "    # Function to select dataset to read\n",
-    "    if status == 'train':\n",
-    "        df = pd.read_csv('../datasets/train.csv')\n",
-    "    elif status == 'test':\n",
-    "        df = pd.read_csv('../datasets/test.csv')\n",
-    "    else:\n",
-    "        print(f\"Select the correct dataset\")\n",
-    "    return df"
+    "#Select dataset to read\n",
+    "# Select 'train' to read train.csv\n",
+    "# Select 'test' to read test.csv\n",
+    "\n",
+    "status = 'train'\n",
+    "\n",
+    "if status == 'train':\n",
+    "    df = pd.read_csv('../datasets/train.csv')\n",
+    "elif status == 'test':\n",
+    "    df = pd.read_csv('../datasets/test.csv')\n",
+    "else:\n",
+    "    print(f\"Select the correct dataset\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4a1f3014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select 'train' to read train.csv\n",
-    "# Select 'test' to read test.csv\n",
-    "status = 'train'\n",
-    "df = read_train_test(status)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "edae3daa",
    "metadata": {},
    "outputs": [
@@ -84,7 +74,7 @@
        "39"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,9 +108,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "6719a05e",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -437,9 +425,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "327adba3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -485,9 +471,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "6ff9923c",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -545,9 +529,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "06b59287",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -997,9 +979,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "2cb456ee",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
