--- a/code/02_data_preprocessing.ipynb
+++ b/code/02_data_preprocessing.ipynb
@@ -45,28 +45,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_train_test(status='train'):\n",
-    "    # Function to select dataset to read\n",
-    "    if status == 'train':\n",
-    "        df = pd.read_csv('../datasets/train_fill.csv')\n",
-    "    elif status == 'test':\n",
-    "        df = pd.read_csv('../datasets/test_fill.csv')\n",
-    "    else:\n",
-    "        print(f\"Select the correct dataset\")\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4a1f3014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Select dataset to read\n",
     "# Select 'train' to read train.csv\n",
     "# Select 'test' to read test.csv\n",
+    "\n",
     "status = 'train'\n",
-    "df = read_train_test(status)"
+    "\n",
+    "if status == 'train':\n",
+    "    df = pd.read_csv('../datasets/train_fill.csv')\n",
+    "elif status == 'test':\n",
+    "    df = pd.read_csv('../datasets/test_fill.csv')\n",
+    "else:\n",
+    "    print(f\"Select the correct dataset\")"
    ]
   },
   {
@@ -237,9 +227,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "facecd8d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -317,9 +305,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7b6b7a95",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -759,9 +745,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "872e7366",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1120,9 +1104,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "65f0d668",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1958,9 +1940,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "13c705e8",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2086,9 +2066,7 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "05d6c79d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2158,9 +2136,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "id": "9bc48550",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2424,9 +2400,7 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "0fb4e0cd",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create has fireplace \n",
@@ -2437,9 +2411,7 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "cdcfb848",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2510,9 +2482,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "d02e757f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3342,9 +3312,7 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "5a63bfaf",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3591,9 +3559,7 @@
    "cell_type": "code",
    "execution_count": 93,
    "id": "3329b8bb",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4011,9 +3977,7 @@
    "cell_type": "code",
    "execution_count": 124,
    "id": "2a2b6571",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4117,9 +4081,7 @@
    "cell_type": "code",
    "execution_count": 128,
    "id": "61b5536b",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4298,9 +4260,7 @@
    "cell_type": "code",
    "execution_count": 133,
    "id": "3dd01dc9",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4386,9 +4346,7 @@
    "cell_type": "code",
    "execution_count": 137,
    "id": "51aa07a3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4486,9 +4444,7 @@
    "cell_type": "code",
    "execution_count": 140,
    "id": "24f03ca5",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4928,9 +4884,7 @@
    "cell_type": "code",
    "execution_count": 153,
    "id": "ad8a7211",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4966,9 +4920,7 @@
    "cell_type": "code",
    "execution_count": 154,
    "id": "1df3ea8b",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5090,9 +5042,7 @@
    "cell_type": "code",
    "execution_count": 159,
    "id": "b367111c",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5535,9 +5485,7 @@
    "cell_type": "code",
    "execution_count": 179,
    "id": "e3c7c0ca",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
