--- a/code/02_data_preprocessing_discrete_to_category.ipynb
+++ b/code/02_data_preprocessing_discrete_to_category.ipynb
@@ -41,32 +41,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0569f20",
+   "id": "b77f6b2b-a24a-4bc6-8d3d-3c7f2e0ddff3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_train_test(status='train'):\n",
-    "    # Function to select dataset to read\n",
-    "    if status == 'train':\n",
-    "        df = pd.read_csv('../datasets/train_fill.csv')\n",
-    "    elif status == 'test':\n",
-    "        df = pd.read_csv('../datasets/test_fill.csv')\n",
-    "    else:\n",
-    "        print(f\"Select the correct dataset\")\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4a1f3014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Select dataset to read\n",
     "# Select 'train' to read train.csv\n",
     "# Select 'test' to read test.csv\n",
+    "\n",
     "status = 'train'\n",
-    "df = read_train_test(status)"
+    "\n",
+    "if status == 'train':\n",
+    "    df = pd.read_csv('../datasets/train_fill.csv')\n",
+    "elif status == 'test':\n",
+    "    df = pd.read_csv('../datasets/test_fill.csv')\n",
+    "else:\n",
+    "    print(f\"Select the correct dataset\")"
    ]
   },
   {
@@ -79,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7a0187b7",
    "metadata": {},
    "outputs": [],
@@ -98,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c9fea7c6",
    "metadata": {},
    "outputs": [
@@ -108,7 +98,7 @@
        "2197"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a4997dfd",
    "metadata": {},
    "outputs": [
@@ -129,7 +119,7 @@
        "2197"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,9 +227,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "facecd8d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -313,9 +301,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7b6b7a95",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -753,9 +739,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "872e7366",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1104,9 +1088,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "65f0d668",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1937,9 +1919,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "13c705e8",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2063,9 +2043,7 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "05d6c79d",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2132,9 +2110,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "id": "9bc48550",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2393,9 +2369,7 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "0fb4e0cd",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create has fireplace \n",
@@ -2406,9 +2380,7 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "cdcfb848",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2479,9 +2451,7 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "d02e757f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3299,9 +3269,7 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "5a63bfaf",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3548,9 +3516,7 @@
    "cell_type": "code",
    "execution_count": 93,
    "id": "3329b8bb",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3968,9 +3934,7 @@
    "cell_type": "code",
    "execution_count": 124,
    "id": "2a2b6571",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4074,9 +4038,7 @@
    "cell_type": "code",
    "execution_count": 128,
    "id": "61b5536b",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4249,9 +4211,7 @@
    "cell_type": "code",
    "execution_count": 133,
    "id": "3dd01dc9",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4331,9 +4291,7 @@
    "cell_type": "code",
    "execution_count": 137,
    "id": "51aa07a3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4429,9 +4387,7 @@
    "cell_type": "code",
    "execution_count": 140,
    "id": "24f03ca5",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4462,9 +4418,7 @@
    "cell_type": "code",
    "execution_count": 141,
    "id": "879181a5",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4645,9 +4599,7 @@
    "cell_type": "code",
    "execution_count": 149,
    "id": "625b8039",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4671,9 +4623,7 @@
    "cell_type": "code",
    "execution_count": 150,
    "id": "db29a6a4",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4756,9 +4706,7 @@
    "cell_type": "code",
    "execution_count": 154,
    "id": "ad8a7211",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4792,9 +4740,7 @@
    "cell_type": "code",
    "execution_count": 155,
    "id": "1df3ea8b",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4874,9 +4820,7 @@
    "cell_type": "code",
    "execution_count": 159,
    "id": "b367111c",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4908,9 +4852,7 @@
    "cell_type": "code",
    "execution_count": 160,
    "id": "48e8e16f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4936,9 +4878,7 @@
    "cell_type": "code",
    "execution_count": 161,
    "id": "97749ab9",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4991,9 +4931,7 @@
    "cell_type": "code",
    "execution_count": 164,
    "id": "279803fb",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5053,9 +4991,7 @@
    "cell_type": "code",
    "execution_count": 166,
    "id": "4c18a7de",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5090,9 +5026,7 @@
    "cell_type": "code",
    "execution_count": 168,
    "id": "3ac715b0",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
