--- a/code/03_model_benchmarking.ipynb
+++ b/code/03_model_benchmarking.ipynb
@@ -46,36 +46,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0569f20",
+   "id": "e632074a-2ba9-42ae-a026-6545755b8f8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_train_test(status='train'):\n",
-    "    # Function to select dataset to read\n",
-    "    if status == 'train':\n",
-    "        df = pd.read_csv('../datasets/train_cleaned.csv')\n",
-    "    elif status == 'test':\n",
-    "        df = pd.read_csv('../datasets/test_cleaned.csv')\n",
-    "    else:\n",
-    "        print(f\"Select the correct dataset\")\n",
-    "    return df"
+    "#Select dataset to read\n",
+    "# Select 'train' to read train.csv\n",
+    "# Select 'test' to read test.csv\n",
+    "\n",
+    "status = 'train'\n",
+    "\n",
+    "if status == 'train':\n",
+    "    df = pd.read_csv('../datasets/train_cleaned.csv')\n",
+    "elif status == 'test':\n",
+    "    df = pd.read_csv('../datasets/test_cleaned.csv')\n",
+    "else:\n",
+    "    print(f\"Select the correct dataset\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4a1f3014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select 'train' to read train.csv\n",
-    "# Select 'test' to read test.csv\n",
-    "df = read_train_test('train')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "0c022088",
    "metadata": {},
    "outputs": [
@@ -85,7 +76,7 @@
        "(2092, 60)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,11 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6719a05e",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -304,7 +293,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
