--- a/code/04_model_comparison.ipynb
+++ b/code/04_model_comparison.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4a432be9",
    "metadata": {},
    "outputs": [],
@@ -48,46 +48,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e0569f20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_train_test(status='train'):\n",
-    "    # Function to select dataset to read\n",
-    "    if status == 'train':\n",
-    "        df = pd.read_csv('../datasets/train_cleaned.csv')\n",
-    "        df_discrete = pd.read_csv('../datasets/train_discrete_cleaned.csv')\n",
-    "        \n",
-    "    elif status == 'test':\n",
-    "        df = pd.read_csv('../datasets/test_cleaned.csv')\n",
-    "        df_discrete = 0\n",
-    "        \n",
-    "    else:\n",
-    "        print(f\"Select the correct dataset\")\n",
-    "        \n",
-    "    return df,df_discrete"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "4a1f3014",
+   "id": "9c27c565-7d0d-4dde-9213-9e34e07b10e2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Select dataset to read\n",
     "# Select 'train' to read train.csv\n",
     "# Select 'test' to read test.csv\n",
-    "df,df_discrete = read_train_test('train')"
+    "\n",
+    "status = 'train'\n",
+    "\n",
+    "if status == 'train':\n",
+    "    df = pd.read_csv('../datasets/train_cleaned.csv')\n",
+    "    df_discrete = pd.read_csv('../datasets/train_discrete_cleaned.csv')\n",
+    "    \n",
+    "elif status == 'test':\n",
+    "    df = pd.read_csv('../datasets/test_cleaned.csv')\n",
+    "    \n",
+    "else:\n",
+    "    print(f\"Select the correct dataset\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "6719a05e",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -291,7 +278,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,9 +609,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "7931342e",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -847,9 +832,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "7a281966",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1215,6 +1198,38 @@
    "source": [
     "# displaying columns to copy to test.csv\n",
     "print(num_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a5db4be0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1\n",
+       "1       1\n",
+       "2       1\n",
+       "3       1\n",
+       "4       1\n",
+       "       ..\n",
+       "2087    1\n",
+       "2088    1\n",
+       "2089    1\n",
+       "2090    1\n",
+       "2091    1\n",
+       "Name: lot_slope, Length: 2092, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['lot_slope']"
    ]
   },
   {
