--- a/code/06_production_model_evaluation.ipynb
+++ b/code/06_production_model_evaluation.ipynb
@@ -53,36 +53,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_train_test(status='train'):\n",
-    "    # Function to select dataset to read\n",
-    "    if status == 'train':\n",
-    "        df = pd.read_csv('../datasets/train_cleaned.csv')\n",
-    "    elif status == 'test':\n",
-    "        df = pd.read_csv('../datasets/test_cleaned.csv')\n",
-    "    else:\n",
-    "        print(f\"Select the correct dataset\")\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4a1f3014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Select dataset to read\n",
     "# Select 'train' to read train.csv\n",
     "# Select 'test' to read test.csv\n",
-    "df = read_train_test('train')"
+    "\n",
+    "status = 'train'\n",
+    "\n",
+    "if status == 'train':\n",
+    "    df = pd.read_csv('../datasets/train_cleaned.csv')\n",
+    "elif status == 'test':\n",
+    "    df = pd.read_csv('../datasets/test_cleaned.csv')\n",
+    "else:\n",
+    "    print(f\"Select the correct dataset\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "6719a05e",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -509,12 +498,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84e0503e-827f-4099-b246-c574b61a3b8f",
+   "metadata": {},
+   "source": [
+    "#### Explanation of features and hyperparameters\n",
+    "- All numerical features\n",
+    "    - Details of each numerical features\n",
+    "- Quality related categorical features\n",
+    "    - Details of each categorical features\n",
+    "- Hyper parameters?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "7a281966",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
