update from feedback

--- a/code/04_model_comparison.ipynb
+++ b/code/04_model_comparison.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4a432be9",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9c27c565-7d0d-4dde-9213-9e34e07b10e2",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "id": "d9143d7a-d955-4db9-8f89-f88794dde006",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2092, 60)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check shape\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "6719a05e",
    "metadata": {},
    "outputs": [
@@ -125,12 +147,12 @@
        "      <th>0</th>\n",
        "      <td>Res</td>\n",
        "      <td>80.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>AllPub</td>\n",
        "      <td>Corner</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>SawyerW</td>\n",
        "      <td>N</td>\n",
        "      <td>...</td>\n",
@@ -149,12 +171,12 @@
        "      <th>1</th>\n",
        "      <td>Res</td>\n",
        "      <td>90.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>AllPub</td>\n",
        "      <td>CulDSac</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>SawyerW</td>\n",
        "      <td>N</td>\n",
        "      <td>...</td>\n",
@@ -173,12 +195,12 @@
        "      <th>2</th>\n",
        "      <td>Res</td>\n",
        "      <td>60.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>NoSeWa</td>\n",
        "      <td>CulDSac</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Timber</td>\n",
        "      <td>N</td>\n",
        "      <td>...</td>\n",
@@ -197,12 +219,12 @@
        "      <th>3</th>\n",
        "      <td>Res</td>\n",
        "      <td>48.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>AllPub</td>\n",
        "      <td>Inside</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>NridgHt</td>\n",
        "      <td>N</td>\n",
        "      <td>...</td>\n",
@@ -221,12 +243,12 @@
        "      <th>4</th>\n",
        "      <td>Res</td>\n",
        "      <td>61.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>AllPub</td>\n",
        "      <td>Inside</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Gilbert</td>\n",
        "      <td>R</td>\n",
        "      <td>...</td>\n",
@@ -248,18 +270,18 @@
       ],
       "text/plain": [
        "  ms_zoning  lot_frontage  street  lot_shape  lot_contour utilities  \\\n",
-       "0       Res          80.0       1          1            1    AllPub   \n",
-       "1       Res          90.0       1          0            1    AllPub   \n",
-       "2       Res          60.0       1          0            1    NoSeWa   \n",
-       "3       Res          48.0       1          1            1    AllPub   \n",
-       "4       Res          61.0       1          0            1    AllPub   \n",
+       "0       Res          80.0     1.0        1.0          1.0    AllPub   \n",
+       "1       Res          90.0     1.0        0.0          1.0    AllPub   \n",
+       "2       Res          60.0     1.0        0.0          1.0    NoSeWa   \n",
+       "3       Res          48.0     1.0        1.0          1.0    AllPub   \n",
+       "4       Res          61.0     1.0        0.0          1.0    AllPub   \n",
        "\n",
        "  lot_config  lot_slope neighborhood condition_1  ... sale_price  \\\n",
-       "0     Corner          1      SawyerW           N  ...     159000   \n",
-       "1    CulDSac          1      SawyerW           N  ...     271900   \n",
-       "2    CulDSac          1       Timber           N  ...     137500   \n",
-       "3     Inside          1      NridgHt           N  ...     248500   \n",
-       "4     Inside          1      Gilbert           R  ...     167000   \n",
+       "0     Corner        1.0      SawyerW           N  ...     159000   \n",
+       "1    CulDSac        1.0      SawyerW           N  ...     271900   \n",
+       "2    CulDSac        1.0       Timber           N  ...     137500   \n",
+       "3     Inside        1.0      NridgHt           N  ...     248500   \n",
+       "4     Inside        1.0      Gilbert           R  ...     167000   \n",
        "\n",
        "  has_2nd_floor_sf total_sf  has_basement_sf  total_bath  has_open_porch  \\\n",
        "0                0   2436.0                1         1.5               1   \n",
@@ -278,7 +300,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +484,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "====== Top 15 Features =======\n",
+      "====== Top 15 Num Feat. ======\n",
       "\n",
       "train r2: 0.8938\n",
       "test_r2: 0.8856\n",
@@ -486,7 +508,7 @@
    ],
    "source": [
     "# running the first iteration \n",
-    "y_test,y_test_preds = linreg_log(X,y,0.3,True,name='Top 15 Features')"
+    "y_test,y_test_preds = linreg_log(X,y,0.3,True,name='Top 15 Num Feat.')"
    ]
   },
   {
@@ -539,7 +561,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "====== Top 20 Features =======\n",
+      "====== Top 20 Num Feat. ======\n",
       "\n",
       "train r2: 0.8968\n",
       "test_r2: 0.8924\n",
@@ -563,7 +585,7 @@
    ],
    "source": [
     "# running 2nd iteration\n",
-    "y_test,y_test_preds = linreg_log(X,y,0.3,True,name='Top 20 Features')"
+    "y_test,y_test_preds = linreg_log(X,y,0.3,True,name='Top 20 Num Feat.')"
    ]
   },
   {
@@ -616,7 +638,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "====== All 25 Features =======\n",
+      "====== All 25 Num Feat. ======\n",
       "\n",
       "train r2: 0.9158\n",
       "test_r2: 0.9127\n",
@@ -640,7 +662,7 @@
    ],
    "source": [
     "# running the model\n",
-    "y_test,y_test_preds = linreg_log(X,y,0.3,True, name='All 25 Features')"
+    "y_test,y_test_preds = linreg_log(X,y,0.3,True, name='All 25 Num Feat.')"
    ]
   },
   {
@@ -728,7 +750,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " All 25 Features + 3 Qualities \n",
+      " All 25 Num Feat. + 3 Quality Category \n",
       "\n",
       "train r2: 0.9202\n",
       "test_r2: 0.9157\n",
@@ -752,7 +774,7 @@
    ],
    "source": [
     "# Run the model\n",
-    "y_test,y_test_preds = linreg_log(X,y,0.3,True,name='All 25 Features + 3 Qualities')"
+    "y_test,y_test_preds = linreg_log(X,y,0.3,True,name='All 25 Num Feat. + 3 Quality Category')"
    ]
   },
   {
@@ -839,7 +861,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "= All 25 Features + Quality ==\n",
+      " All 25 Num Feat. + 6 Quality Category \n",
       "\n",
       "train r2: 0.9226\n",
       "test_r2: 0.9167\n",
@@ -863,7 +885,7 @@
    ],
    "source": [
     "# Testing the model\n",
-    "y_test,y_test_preds = linreg_log(X,y,0.3,True,name='All 25 Features + Quality')"
+    "y_test,y_test_preds = linreg_log(X,y,0.3,True,name='All 25 Num Feat. + 6 Quality Category')"
    ]
   },
   {
@@ -1202,38 +1224,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "a5db4be0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       1\n",
-       "1       1\n",
-       "2       1\n",
-       "3       1\n",
-       "4       1\n",
-       "       ..\n",
-       "2087    1\n",
-       "2088    1\n",
-       "2089    1\n",
-       "2090    1\n",
-       "2091    1\n",
-       "Name: lot_slope, Length: 2092, dtype: int64"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X['lot_slope']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
    "id": "0feb79dc",
    "metadata": {},
@@ -1258,6 +1248,28 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "d3113315-68d1-4aa2-a5a3-a3a9e70f0d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2092, 39), (2092,))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check shape\n",
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "cfbd844a",
    "metadata": {},
    "outputs": [],
@@ -1268,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "c8e5b260",
    "metadata": {},
    "outputs": [],
